--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="LeeCode.cpp" />
+    <ClCompile Include="reverse_linkedList.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
