--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="LeeCode.cpp">
+    <ClCompile Include="reverse_linkedList.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
