--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="longest_substring_without_repeating_characters.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="amp.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
