--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="amp.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="find_nums_repeat_K.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
