[add] 删除链表指定位置的元素

--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="find_nums_repeat_K.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="remove_specific_position_in_linkedlist.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
