--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -30,5 +30,8 @@
     <ClCompile Include="remove_specific_position_in_linkedlist.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="LRU.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
