[add] reverse nodes in k group

--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="reverse_linkedList.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="Reverse_nodes_in_kGroup.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
