--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="Kth_Largest_Element_in_an_array.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Reverse_nodes_in_kGroup.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
