--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="Reverse_nodes_in_kGroup.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="sum_3_nums.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
