[add] max subarray 2

--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -45,5 +45,8 @@
     <ClCompile Include="quick_sort.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="max_subarray.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
