--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="merge_two_list.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="two_sum.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
