--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="amp.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="binary_tree_traversal.cpp" />
     <ClCompile Include="find_nums_repeat_K.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
@@ -162,6 +163,7 @@
     </ClCompile>
     <ClCompile Include="Reverse_nodes_in_kGroup.cpp" />
     <ClCompile Include="sum_3_nums.cpp" />
+    <ClCompile Include="two_sum.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
