--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj
@@ -147,6 +147,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Kth_Largest_Element_in_an_array.cpp" />
+    <ClCompile Include="longest_palindrome.cpp" />
     <ClCompile Include="longest_substring_without_repeating_characters.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
