[add] jump game

--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -63,5 +63,8 @@
     <ClCompile Include="generate_parentheses.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="jump_game.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
