--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -69,5 +69,8 @@
     <ClCompile Include="jump_game2.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="随机抽奖_腾讯.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
