--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -72,5 +72,8 @@
     <ClCompile Include="随机抽奖_腾讯.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="字符串转数字_腾讯.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
