--- a/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
+++ b/LeetCode_cpp/LeeCode/LeeCode/LeeCode.vcxproj.filters
@@ -87,5 +87,8 @@
     <ClCompile Include="无重复字符的最长子串.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="合并K个有序链表.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
